[2단계 - 블랙잭 베팅] 말론(유민재) 미션 제출합니다. (#883)
* test(red): 자신의 패를 담당하는 클래스의 카드 추가 테스트 추가

* test(green): 자신의 패를 담당하는 클래스의 카드 기능 구현

* test(red): 자신의 패를 담당하는 클래스의 카드 합계 테스트 추가

* test(green): 자신의 패를 담당하는 클래스의 카드 합계 기능 구현

* test(red): 딜러와 참가자의 부모 클래스인 participant 의 카드 추가 테스트 추가

* test(green): 딜러와 참가자의 부모 클래스인 participant 의 카드 추가 기능 구현

* test(red): 딜러와 참가자의 부모 클래스인 participant 의 카드 합계 테스트 추가

* test(green): 딜러와 참가자의 부모 클래스인 participant 의 카드 기능 구현

* test: 52 장의 카드에 대한 테스트로 변경

* feat: 52 장의 카드에 대한 클래스 구현

* test: 이름과 패를 가진 플레이어 대한 테스트 수정

* refactor: Participant 를 상속받고, 이름과 자신의 패를 가진 Player 로 수정.

딜러에게 카드를 받지 않고, 덱에게 카드를 받는 로직으로 수정

* test: 인자로 딜러를 주지 않고, deck 을 주는 식으로 테스트 수정

* refactor: 인자로 딜러를 주지 않고, deck 을 주는 로직 수정

* test: 카드 덱을 생성하는 테스트 추가

* refactor: Deck 을 생성하는 로직으로 변경

* test: 필드에 자신의 패를 가지고, Participant 를 상속받는 Dealer 클래스 테스트 추가

* feat: 필드에 자신의 패를 가지고, Participant 를 상속받는 Dealer 클래스 구현

* test: 딜러가 카드를 뽑는 방식에서, Deck 이 카드를 뽑아서 주는 방식으로 테스트 변경

* chore: 클래스 삭제

* refactor: 딜러가 카드 뽑는 방식에서 deck 이 카드를 뽑는 방식으로 로직 수정

* fix: 불변 객체에 대한 ArrayList 선언 추가

* test: 플레이어들의 hand 인자로 추가

* fix: 메서드 getHand 로 변경

* refactor: 메서드 이름 변경

* refactor: Participant 추상클래스로 변경 후, 테스트 삭제

* test: 공백 이름을 검증하는 테스트 작성

* feat: String 형의 이름을 포장하는 객체 구현

* test: int 형의 돈을 포장하는 객체의 테스트 추가

* feat: int 형의 돈을 포장하는 객체 구현

* test: 이름들을 List 에 담아 보관하는 객체 테스트 추가

* test: 이름들을 List 에 담아 보관하는 객체 구현

* docs: 플레이어 정책에 이름 공백 추가 작성

* test: PlayersTest 에서 참가자 인원 검증 테스트 제거, Names 를 from 메서드에 파라미터로 주는 로직으로 변경

* refactor: Names 를 from 메서드에 파라미터로 주는 로직으로 변경

* feat: getter 메서드 구현

* refactor: Player 가 필드에 Name 을 갖도록 수정

* test: 참가자 초기 카드 오픈 테스트 추가

* test: 플레이어 중복 참가 테스트 추가

* feat: Card 클래스 equals 재정의

* chore: 공백 제거

* test: 돈 만원 단위 테스트 추가

* feat: 돈 만원 단위를 검사하는 메서드 구현

* refactor: static 선언 제거

* refactor: 변수에 final 선언

* test: Player 생성자에 Money 를 추가

* refactor: Player 의 필드에 Money 추가

* test: Players 가 from 메서드 인자로 Map<Name, Money> 를 받아오도록 수정

* refactor: Players 가 from 의 인자로 Map<Name, Money> 를 받아오도록 수정

